gv-digitization module updated
