# anuvaad-etl/anuvaad-extractor/document-processor/gv-document-digitization/doc/gv-document-digitize-api-contract.yaml
@@ -13,13 +13,13 @@ paths:
   /v0/10/document-digitize:
     post:
       tags:
-        - GV Digitization
+        - digitize
       summary: API to digitize scanned documents.
       requestBody:
         content:
           "*/*":
             schema:
-              $ref: "#/components/schemas/Request"
+              $ref: "#/components/schemas/DigitizationRequest"
         required: true
       responses:
         "200":
@@ -27,55 +27,50 @@ paths:
           content:
             "*/*":
               schema:
-                $ref: "#/components/schemas/Response"
+                $ref: "#/components/schemas/DigitizationResponse"
         "400":
           description: On input errors causing a failure in the job.
           content:
             "*/*":
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: "#/components/schemas/ErrorCode"
       x-codegen-request-body-name: filename
 components:
   schemas:
-    Request:
+  
+    DigitizationRequest:
       type: object
       properties:
-        inputs:
+        files:
           type: array
-          description: array of files
+          description: a list of objects having file, file_config and its pages
           items:
-            $ref: "#/components/schemas/Input"
-    Input:
-      required:
-        - config
-        - file
+            type: object
+            properties:
+              file:
+                $ref: "#/components/schemas/File"
+              file_config:
+                $ref: "#/components/schemas/FileConfig"
+          
+    DigitizationResponse:
       type: object
       properties:
-        file:
-          $ref: "#/components/schemas/File"
-        config:
-          $ref: "#/components/schemas/FileConfig"
-    Response:
-      type: object
-      properties:
-        output:
-          type: object
-          properties:
-            files:
-              type: array
-              description: a list of objets having file, file_config and pages
-              items:
-                type: object
-                properties:
-                  file:
-                    $ref: "#/components/schemas/File"
-                  file_config:
-                    $ref: "#/components/schemas/FileConfig"
-                  pages:
-                    type: array
-                    description: page level paragraph, line, word  and symbol information
-                    items:
-                      $ref: "#/components/schemas/Page"
+        files:
+          type: array
+          description: a list of objects having file, file_config and its pages
+          items:
+            type: object
+            properties:
+              file:
+                $ref: "#/components/schemas/File"
+              file_config:
+                $ref: "#/components/schemas/FileConfig"
+              pages:
+                type: array
+                description: page level paragraph, line, word  and symbol information
+                items:
+                  $ref: "#/components/schemas/Page"
+    
     File:
       type: object
       properties:
@@ -87,28 +82,30 @@ components:
           description: type of input file
         identifier:
           type: string
-          description: unique identifier for a file
+          description: unique identifier for a file generated by the file converter module.
+    
     FileConfig:
       type: object
       properties:
-        language:
-          type: string
-          description: ISO 639-1  language code
+        languages:
+          type: array
+          description: list of ISO 639-1  language code
+          items:
+            type: string
+    
     Page:
       type: object
       properties:
         identifier:
           type: string
           description: unique page identifier
-        width:
-          type: integer
-          description: page width
-        height:
-          type: integer
-          description: page height
+        boundingbox:
+          type: object
+          $ref:  "#/components/schemas/Vertices"
+          description: page coordinates
         path:
           type: string
-          description: page image name
+          description: optional placeholder to hold image path of the page
         resolution:
           type: integer
           description: dpi of the page image
@@ -117,13 +114,14 @@ components:
           description: coordinates of extracted regions
           items:
             $ref: "#/components/schemas/Region"
+    
     Region:
       type: object
       properties:
         boundingbox:
           type: object
-          properties: {}
-          description: region coordinates extracted from google vision
+          $ref:  "#/components/schemas/Vertices"
+          description: region coordinates
         identifier:
           type: string
           description: unique identifier for region
@@ -141,23 +139,37 @@ components:
             - MATHEMATICAL_FORMULA
             - HEADER
             - FOOTER
+            - BGIMAGE
         path:
           type: string
-          description: optional placeholder to hold image path
+          description: optional placeholder to hold image path of the region
         regions:
           type: array
-          description: coordinates and attributes of extracted lines
+          description: various visual objects present on the page
           items:
               oneOf:
                 - $ref: '#/components/schemas/Region'
                 - $ref: '#/components/schemas/DataRegion'
+      required:
+        - boundingbox
+        - identifier
+        - class
+        - regions
+    
     DataRegion:
       type: object
+      required:
+        - boundingbox
+        - identifier
+        - confidence
+        - class
+        - text
+        - font
       properties:
         boundingbox:
           type: object
-          properties: {}
-          description: region coordinates extracted from google vision
+          $ref:  "#/components/schemas/Vertices"
+          description: region coordinates extracted
         identifier:
           type: string
           description: unique identifier for region
@@ -181,102 +193,26 @@ components:
           description: collated text at region level or class specific metadata
         font:
           $ref: "#/components/schemas/Font"
-    Line:
+      
+  
+    Vertices:
+      type: array
+      description: list of vertex object
+      items:
+        $ref: '#/components/schemas/Vertex'
+    
+    Vertex:
       type: object
+      description: coordinate of a point, X & Y
+      required:
+        - x
+        - y
       properties:
-        boundingbox:
-          $ref: "#/components/schemas/Coordinates"
-        font:
-          $ref: "#/components/schemas/Font"
-        class:
-          type: string
-          description: line
-          enum:
-            - LINE
-        identifier:
-          type: string
-          description: unique identifier for line
-          format: uuid4
-        regions:
-          type: array
-          description: coordinates of extracted words
-          items:
-            $ref: "#/components/schemas/Word"
-    Word:
-      type: object
-      properties:
-        identifier:
-          type: string
-          description: unique identifier for word
-          format: uuid4
-        text:
-          type: string
-          description: extracted text
-        language:
-          type: string
-          description: language of the extracted word
-        confidence:
+        x:
           type: number
-          description: confidence of the extracted word
-        font:
-          $ref: "#/components/schemas/Font"
-        class:
-          type: string
-          description: word
-          enum:
-            - WORD
-        boundingbox:
-          $ref: "#/components/schemas/Coordinates"
-        regions:
-          type: array
-          description: coordinates of extracted symbols
-          items:
-            $ref: "#/components/schemas/Symbol"
-      description: v1.0 this object behaves like Region, however in v1.5 onward it behaves
-        like DataRegion object
-    Symbol:
-      type: object
-      properties:
-        identifier:
-          type: string
-          description: unique identifier for symbol
-        text:
-          type: string
-          description: extracted text
-        confidence:
+        y:
           type: number
-          description: confidence of the extracted symbol
-        language:
-          type: string
-          description: language of the extracted symbol
-        font:
-          $ref: "#/components/schemas/Font"
-        class:
-          type: string
-          description: word
-          enum:
-            - SYMBOL
-        boundingbox:
-          $ref: "#/components/schemas/Coordinates"
-    Coordinates:
-      type: object
-      properties:
-        top_left:
-          type: object
-          properties: {}
-          description: top left x,y co-ordinate of the bounding box
-        top_right:
-          type: object
-          properties: {}
-          description: top right x,y co-ordinate of the bounding box
-        bottom_right:
-          type: object
-          properties: {}
-          description: bottom right x,y co-ordinate of the bounding box
-        bottom_left:
-          type: object
-          properties: {}
-          description: bottom left x,y co-ordinate of the bounding box
+      
     Font:
       type: object
       properties:
@@ -293,13 +229,28 @@ components:
             - BOLD
             - ITALIC
             - REGULAR
-    HttpOutput:
+    
+    ErrorCode:
       type: object
       properties:
-        status:
-          type: number
-          description: Status code.
-    Error:
+        code:
+          type: integer
+          description: status code
+          enum:
+            - FILE_NOT_FOUND
+            - FILE_FORMAT_NOT_SUPPORTED
+            - OCR_SERVICE_NOT_AVAILABLE
+            - UNAUTHORIZED_ACCESS
+            - INAPPROPRIATE_DPI_RECEIVED
+            
+        message:
+          type: string
+          description: human understandable format
+      required:
+        - code
+        - message
+    
+    HttpOutput:
       type: object
       properties:
         ok:
@@ -308,7 +259,12 @@ components:
         why:
           type: string
           description: Response message.
-        http:
+        status:
           type: object
-          properties: {}
-          description: Final output of this process.
+          description: overall operation status
+          $ref: '#/components/schemas/ErrorCode'
+        data:
+          type: integer
+          description: should be null object
+          $ref: '#/components/schemas/DigitizationResponse'
+          
