# anuvaad-etl/anuvaad-extractor/document-processor/gv-document-digitization/src/errors/error_validator.py
@@ -26,9 +26,9 @@ class ValidationResponse(object):
                 input_filepath = file_ops.input_path(input_filename)
                 if input_filename == "" or input_filename is None:
                     raise FileErrors("FILENAME_ERROR", "Filename not found or its empty")
-                #elif not input_filename.endswith('.pdf'):
-                    #raise FileErrors("FILE_TYPE_ERROR", "This file type is not allowed. Currently, support only pdf file.")
-                if in_file_type == "" or in_file_type is None:
+                elif not input_filename.endswith('.pdf'):
+                    raise FileErrors("FILE_TYPE_ERROR", "This file type is not allowed. Currently, support only pdf file.")
+                elif in_file_type == "" or in_file_type is None:
                     raise FileErrors("FILE_TYPE_ERROR", "This file type is not allowed. Currently, support only pdf file.")
                 #elif file_ops.check_file_extension(in_file_type) is False:
                     #raise FileErrors("FILE_TYPE_ERROR", "This file type is not allowed. Currently, support only pdf file.")
@@ -38,8 +38,8 @@ class ValidationResponse(object):
                     raise FileErrors("LOCALE_ERROR", "No language input or unsupported language input.")
                 
     def format_error(self, json_data):
-        keys_checked = {'workflowCode','jobID','input','tool','stepOrder'}
-        if json_data.keys() == {'input'}:
+        keys_checked = {'workflowCode','jobID','files','tool','stepOrder'}
+        if json_data.keys() == {'files'}:
             return True
         elif json_data.keys() >= keys_checked:
             return True 
